fix: leaflet-control font-size too small

--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -16,3 +16,7 @@ body {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   background-color: white;
 }
+
+.leaflet-control-attribution {
+  font-size: 1.5em;
+}
